<resources>
    <string name="app_name">KARLA SL</string>
    <string name="logo_image">Logo image</string>
    <string name="welcome_msg">¡Bienvenido(a) a KARLA SL!</string>
    <string name="welcome_msg2">Ingresa tu nombre y comencemos:</string>
    <string name="my_name">Mi nombre es:</string>
    <string name="insert_name">Ingresa tu nombre</string>
    <string name="save">Guardar y continuar</string>
    <string name="karla_sl_logo">KARLA SL Logo</string>
    <string name="lets_communicate">Let\'s communicate</string>
    <string name="learnsl">Let\'s learn Sign Language</string>
    <string name="selectqcmodule">Elige cómo quieres comunicarte primero:</string>
    <string name="tts">TTS</string>
    <string name="stt">STT</string>
    <string name="title_activity_ttsscreen">TTSScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>